--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!-- Author of Document -->
     <meta name="author" content="Victoria Elazigue @ Codify Academy">
     <!-- Title -->
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Homepage Replica</title>
     <!-- Font Awesome -->
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
